--- a/components/navbar/nav.less
+++ b/components/navbar/nav.less
@@ -2,9 +2,42 @@
 .nav-base{
   display: flex;
   justify-content: space-between;
-  
+
   background-color: @marketing-color-nav;
 }
 .home-icon{
   cursor: pointer;
+}
+
+.drawer{
+  background-color: @marketing-color-nav;
+  transition:width 0.3s ease-out;
+  width: 0px;
+  overflow: hidden;
+  height: 100%;
+}
+.drawerOpen{
+  background-color: @marketing-color-nav;
+  text-decoration: none;
+  transition:width 0.3s ease-out;
+  display: flex;
+  height: 100%;
+  flex-direction: column;
+  width: 250px;
+}
+
+.navlist{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50px;
+  font-size: 25px;
+  border-top: 1px black solid;
+  border-bottom: 1px black solid;
+
+
+&:hover{
+    cursor: pointer;
+    background-color:@marketing-color-background-nav-hover;
+}
 }
