--- a/css/index.css
+++ b/css/index.css
@@ -33,8 +33,37 @@ body {
 .nav-base {
   display: flex;
   justify-content: space-between;
-  background-color: #1DA1F2;
+  background-color: #349AFA;
 }
 .home-icon {
   cursor: pointer;
+}
+.drawer {
+  background-color: #349AFA;
+  transition: width 0.3s ease-out;
+  width: 0px;
+  overflow: hidden;
+  height: 100%;
+}
+.drawerOpen {
+  background-color: #349AFA;
+  text-decoration: none;
+  transition: width 0.3s ease-out;
+  display: flex;
+  height: 100%;
+  flex-direction: column;
+  width: 250px;
+}
+.navlist {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50px;
+  font-size: 25px;
+  border-top: 1px black solid;
+  border-bottom: 1px black solid;
+}
+.navlist:hover {
+  cursor: pointer;
+  background-color: #376CDE;
 }
