--- a/less/variables.less
+++ b/less/variables.less
@@ -1,4 +1,5 @@
-@marketing-color-nav: #1DA1F2;
+@marketing-color-nav: #349AFA;
 @marketing-color-button: #6E00FF;
 @marketing-color-black: #000;
 @marketing-color-background: #f1f1f1;
+@marketing-color-background-nav-hover:#376CDE;
