UI Nav Made nicer

--- a/components/navbar/nav.less
+++ b/components/navbar/nav.less
@@ -1,17 +1,16 @@
 @import "../../less/variables.less";
 .nav-base{
   display: flex;
-  justify-content: space-between;
-
   background-color: @marketing-color-nav;
 }
 .home-icon{
   cursor: pointer;
+  margin: 0px 10px
 }
 
 .drawer{
   background-color: @marketing-color-nav;
-  transition:width 0.3s ease-out;
+  transition:width 0.1s ease-out;
   width: 0px;
   overflow: hidden;
   height: 100%;
@@ -19,7 +18,7 @@
 .drawerOpen{
   background-color: @marketing-color-nav;
   text-decoration: none;
-  transition:width 0.3s ease-out;
+  transition:width 0.1s ease-out;
   display: flex;
   height: 100%;
   flex-direction: column;
@@ -41,3 +40,16 @@
     background-color:@marketing-color-background-nav-hover;
 }
 }
+.darken{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  transition:all 0.1s ease-out;}
+.lighten{
+  position: absolute;
+  visibility: hidden;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0);
+ transition:all 0.1s ease-out;}
