--- a/less/index.less
+++ b/less/index.less
@@ -10,7 +10,16 @@ html, body {
   margin: 0;
   padding: 0;
 }
-
 body {
+  background-color: @marketing-color-background;
+}
+.main{
+  margin: auto;
+  max-width: 75%;
+  height: 100%;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 @import '../components/navbar/nav';
