--- a/css/index.css
+++ b/css/index.css
@@ -30,17 +30,29 @@ body {
   margin: 0;
   padding: 0;
 }
+body {
+  background-color: #edefff;
+}
+.main {
+  margin: auto;
+  max-width: 75%;
+  height: 100%;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 .nav-base {
   display: flex;
-  justify-content: space-between;
   background-color: #349AFA;
 }
 .home-icon {
   cursor: pointer;
+  margin: 0px 10px;
 }
 .drawer {
   background-color: #349AFA;
-  transition: width 0.3s ease-out;
+  transition: width 0.1s ease-out;
   width: 0px;
   overflow: hidden;
   height: 100%;
@@ -48,7 +60,7 @@ body {
 .drawerOpen {
   background-color: #349AFA;
   text-decoration: none;
-  transition: width 0.3s ease-out;
+  transition: width 0.1s ease-out;
   display: flex;
   height: 100%;
   flex-direction: column;
@@ -66,4 +78,19 @@ body {
 .navlist:hover {
   cursor: pointer;
   background-color: #376CDE;
+}
+.darken {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  transition: all 0.1s ease-out;
+}
+.lighten {
+  position: absolute;
+  visibility: hidden;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0);
+  transition: all 0.1s ease-out;
 }
