UI Card Component

--- a/components/navbar/nav.less
+++ b/components/navbar/nav.less
@@ -1,5 +1,6 @@
 @import "../../less/variables.less";
 .nav-base{
+  font-family: @marketing-font;
   display: flex;
   background-color: @marketing-color-nav;
 }
@@ -9,6 +10,7 @@
 }
 
 .drawer{
+
   background-color: @marketing-color-nav;
   transition:width 0.1s ease-out;
   width: 0px;
@@ -26,6 +28,7 @@
 }
 
 .navlist{
+  font-family: @marketing-font;
   display: flex;
   justify-content: center;
   align-items: center;
