--- a/less/variables.less
+++ b/less/variables.less
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css?family=Poppins&display=swap');
+@marketing-font:'Poppins', sans-serif;
 @marketing-color-nav: #349AFA;
 @marketing-color-button: #6E00FF;
-@marketing-color-black: #000;
-@marketing-color-background: #f7f7fc;
+@marketing-color-black: #000; 
+@marketing-color-background: #c9c9c9;
 @marketing-color-background-nav-hover:#376CDE;
