--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,11 @@
 @font-face {
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: local('Poppins Regular'), local('Poppins-Regular'), url(https://fonts.gstatic.com/s/poppins/v6/pxiEyp8kv8JHgFVrJJfedw.ttf) format('truetype');
+}
+@font-face {
   font-family: 'PT Sans';
   font-style: italic;
   font-weight: 400;
@@ -31,18 +38,22 @@ body {
   padding: 0;
 }
 body {
-  background-color: #edefff;
+  height: 100%;
 }
 .main {
   margin: auto;
-  max-width: 75%;
-  height: 100%;
   background-color: white;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
+.header-banner {
+  border-radius: 5px;
+  margin: 20px;
+  max-width: 100%;
+}
 .nav-base {
+  font-family: 'Poppins', sans-serif;
   display: flex;
   background-color: #349AFA;
 }
@@ -67,6 +78,7 @@ body {
   width: 250px;
 }
 .navlist {
+  font-family: 'Poppins', sans-serif;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -93,4 +105,58 @@ body {
   height: 100%;
   background-color: rgba(0, 0, 0, 0);
   transition: all 0.1s ease-out;
+}
+.card {
+  margin: 20px;
+  font-family: 'Poppins', sans-serif;
+  width: 250px;
+  height: 150px;
+  background-color: #c9c9c9;
+  border-radius: 10px;
+}
+.card-header {
+  font-size: 35px;
+  text-align: center;
+  text-decoration: bold;
+  border-bottom: 1px solid black;
+}
+.card-content {
+  text-align: center;
+}
+.review-caro {
+  display: flex;
+  flex-wrap: wrap;
+}
+.m-card {
+  margin: 20px;
+  font-family: 'Poppins', sans-serif;
+  width: 800px;
+  height: 500px;
+  background-color: #c9c9c9;
+  border-radius: 10px;
+}
+.m-card-header {
+  font-size: 50px;
+  text-align: center;
+  text-decoration: bold;
+  border-bottom: 1px solid black;
+}
+.m-card-content {
+  font-size: 25px;
+  text-align: center;
+}
+.about {
+  display: flex;
+}
+.mini {
+  display: flex;
+  flex-direction: column;
+}
+.footer {
+  height: 50px;
+  font-family: 'Poppins', sans-serif;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #349AFA;
 }
