--- a/less/index.less
+++ b/less/index.less
@@ -6,20 +6,27 @@
   box-sizing: border-box;
 }
 
-html, body {
+html, body { 
   margin: 0;
   padding: 0;
 }
 body {
-  background-color: @marketing-color-background;
+  height: 100%;
 }
 .main{
   margin: auto;
-  max-width: 75%;
-  height: 100%;
   background-color: white;
   display: flex;
   flex-direction: column;
   align-items: center;
+
+}
+.header-banner{
+  border-radius: 5px;
+  margin: 20px;
+  max-width: 100%
 }
 @import '../components/navbar/nav';
+@import '../components/card/card';
+@import '../components/mega-card/mega-card';
+@import '../components/footer/footer';
