--- a/components/navbar/nav.less
+++ b/components/navbar/nav.less
@@ -3,6 +3,10 @@
   font-family: @marketing-font;
   display: flex;
   background-color: @marketing-color-nav;
+  .MediaPhone({
+    height: 75px;
+    });
+    align-items: center;
 }
 .home-icon{
   cursor: pointer;
@@ -25,6 +29,9 @@
   height: 100%;
   flex-direction: column;
   width: 250px;
+  .MediaPhone({
+    min-width: 100%
+  })
 }
 
 .navlist{
