--- a/less/variables.less
+++ b/less/variables.less
@@ -1,7 +1,15 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins&display=swap');
+
+// Variables
+@tablet-down: ~'(max-width: 800px)';
+@tablet-small: ~'(max-width: 700px)';
+@phone-down: ~'(max-width: 480px)';
+@small-phone-down: ~'(max-width: 320px)';
+@tablet: ~"only screen and (min-width: 300px) and (max-width: 750px)";
+
 @marketing-font:'Poppins', sans-serif;
 @marketing-color-nav: #349AFA;
 @marketing-color-button: #6E00FF;
-@marketing-color-black: #000; 
+@marketing-color-black: #000;
 @marketing-color-background: #c9c9c9;
 @marketing-color-background-nav-hover:#376CDE;
