--- a/less/index.less
+++ b/less/index.less
@@ -6,12 +6,12 @@
   box-sizing: border-box;
 }
 
-html, body { 
+html, body {
   margin: 0;
   padding: 0;
 }
 body {
-  height: 100%;
+  min-height: 100%;
 }
 .main{
   margin: auto;
