made nav styled more towards react app

--- a/components/navbar/nav.less
+++ b/components/navbar/nav.less
@@ -1,10 +1,14 @@
 @import "../../less/variables.less";
 .nav-base{
-  font-family: @marketing-font;
-  display: flex;
-  background-color: @marketing-color-nav;
+    font-size: 1.2rem;
+    display: flex;
+    justify-content: flex-start;
+    padding: 20px;
+    width: auto;
+    background-color: #349AFA;
+    color:white;
   .MediaPhone({
-    height: 75px;
+
     });
     align-items: center;
 }
