--- a/components/card/card.less
+++ b/components/card/card.less
@@ -8,12 +8,13 @@
   border-radius: 10px;
 }
 .card-header{
-  font-size: 35px;
+  font-size: 1.5rem;
   text-align: center;
   text-decoration: bold;
   border-bottom: 1px solid black;
 }
 .card-content{
+  font-size: 1rem;
   text-align: center;
 }
 .review-caro{
