--- a/components/footer/footer.less
+++ b/components/footer/footer.less
@@ -1,6 +1,7 @@
 @import "../../less/variables.less";
 .footer{
   height: 50px;
+  font-size: 1.5rem;
   font-family: @marketing-font;
   display: flex;
   align-items: center;
