--- a/components/mega-card/mega-card.less
+++ b/components/mega-card/mega-card.less
@@ -14,13 +14,13 @@
       });
 }
 .m-card-header{
-  font-size: 50px;
+  font-size: 2.5rem;
   text-align: center;
   text-decoration: bold;
   border-bottom: 1px solid black;
 }
 .m-card-content{
-  font-size: 25px;
+  font-size: 1.5rem;
   text-align: center;
 }
 .about{
