--- a/less/index.less
+++ b/less/index.less
@@ -12,6 +12,7 @@ html, body {
 }
 body {
   min-height: 100%;
+  font-size:62.5%;
 }
 .main{
   margin: auto;
@@ -19,7 +20,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-
+    font-size:62.5%;
 }
 .header-banner{
   border-radius: 5px;
