making review caro

--- a/components/footer/footer.less
+++ b/components/footer/footer.less
@@ -1,5 +1,5 @@
-@import "../../less/variables.less";
-.footer{
+@import "../less/variables.less";
+.footer {
   height: 50px;
   font-size: 1.5rem;
   font-family: @marketing-font;
