--- a/components/card/card.less
+++ b/components/card/card.less
@@ -1,24 +1,19 @@
 @import "../../less/variables.less";
-.card{
+.card {
   margin: 20px;
   font-family: @marketing-font;
-  width:250px;
-  height:150px;
+  width: 100%;
+  height: 150px;
   background-color: @marketing-color-background;
   border-radius: 10px;
 }
-.card-header{
+.card-header {
   font-size: 1.5rem;
   text-align: center;
   text-decoration: bold;
   border-bottom: 1px solid black;
 }
-.card-content{
+.card-content {
   font-size: 1rem;
   text-align: center;
-}
-.review-caro{
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
 }
