Added sliding reviews

--- a/components/slide/slide.less
+++ b/components/slide/slide.less
@@ -27,36 +27,45 @@
 }
 .left-button::after,
 .right-button::after {
-  content: " ";
+
 }
 .right-button::after {
-  left: 47%;
+
 }
 
 .card.initial,
 .card.active {
-  display: block;
-  max-width: 800px;
+  display: block !important;
+  transition:width .5s ease-out;
+  width: 250px;
   opacity: 1;
   position: relative;
-  transition: 1s;
 }
 .card.prev,
 .card.next {
 }
 .card.prev {
-  display: hidden;
-  width: 0;
+  .card-header,
+  .card-content{
+  visibility: hidden;
+ }
+  transition:width .5s ease-out;
+  width: 0px;
+  font-size: 0;
+  overflow: hidden;
 }
 .card.next {
-  display: hidden;
-  width: 0;
+  .card-header,
+  .card-content{
+  visibility: hidden;
+ }
+  transition:width .5s ease-out;
+  width: -0px;
+  overflow: hidden;
 }
 .card {
-  display: none;
-  top: 0;
-  margin: auto;
-  padding: 1rem 4rem;
+  width: 0px;
+  overflow: hidden;
 }
 p {
   margin: 0px 8px;
