--- a/less/variables.less
+++ b/less/variables.less
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500");
 
 // Variables
 @tablet-down: ~'(max-width: 800px)';
@@ -7,7 +7,7 @@
 @small-phone-down: ~'(max-width: 320px)';
 @tablet: ~"only screen and (min-width: 300px) and (max-width: 750px)";
 
-@marketing-font:'Poppins', sans-serif;
+@marketing-font:'Roboto', sans-serif;
 @marketing-color-nav: #349AFA;
 @marketing-color-button: #6E00FF;
 @marketing-color-black: #000;
