--- a/components/card/card.less
+++ b/components/card/card.less
@@ -1,5 +1,17 @@
 @import "../../less/variables.less";
+.people{
+margin: 25px;
+  width: 300px !important;
+  height: 500px !important;
+  .MediaTabletSmall({min-width: 100%;margin: 25px 0px;});
+
+}
+
 .card {
+  display: flex;
+  flex-direction: column;
+  align-items: space-between;
+  box-shadow: 0 20px 6px -6px black;
   font-family: @marketing-font;
   width: 100%;
   height: 150px;
@@ -13,6 +25,16 @@
   border-bottom: 1px solid black;
 }
 .card-content {
+  flex-grow: 1;
   font-size: 1rem;
   text-align: center;
+}
+.card-footer {
+  cursor: pointer;
+  border-top: 1px solid black;
+  font-size: 1rem;
+  text-align: center;
+  &:hover{
+    background-color: darken(@marketing-color-background, 10%)
+  }
 }
