--- a/components/navbar/nav.less
+++ b/components/navbar/nav.less
@@ -1,5 +1,6 @@
 @import "../../less/variables.less";
 .nav-base{
+
     font-size: 1.2rem;
     display: flex;
     justify-content: flex-start;
@@ -39,14 +40,15 @@
 }
 
 .navlist{
+    text-decoration: none;
+    color: white;
   font-family: @marketing-font;
   display: flex;
   justify-content: center;
   align-items: center;
   height: 50px;
   font-size: 25px;
-  border-top: 1px black solid;
-  border-bottom: 1px black solid;
+  border-bottom: 2px black solid;
 
 
 &:hover{
