Made nicer About Page

--- a/components/card/card.less
+++ b/components/card/card.less
@@ -31,6 +31,8 @@ margin: 25px;
 }
 .card-footer {
   cursor: pointer;
+  text-decoration: none;
+  color: black;
   border-top: 1px solid black;
   font-size: 1rem;
   text-align: center;
