--- a/css/index.css
+++ b/css/index.css
@@ -157,6 +157,8 @@ p {
 }
 .card-footer {
   cursor: pointer;
+  text-decoration: none;
+  color: black;
   border-top: 1px solid black;
   font-size: 1rem;
   text-align: center;
