added pics to about page

--- a/components/mega-card/mega-card.less
+++ b/components/mega-card/mega-card.less
@@ -12,6 +12,7 @@ box-shadow: 0 8px 6px -6px black;
 }
 .m-card-header {
   font-size: 2.5rem;
+  background-color:@marketing-color-nav;
   text-align: center;
   text-decoration: bold;
   border-bottom: 1px solid black;
