--- a/components/card/card.less
+++ b/components/card/card.less
@@ -6,11 +6,17 @@ margin: 25px;
   .MediaTabletSmall({min-width: 100%;margin: 25px 0px;});
 
 }
+.team{
+  margin: 10px;
+  width: 200px;
+  height: 200px;
+  border-radius: 200px;
+}
 
 .card {
   display: flex;
   flex-direction: column;
-  align-items: space-between;
+  align-items: center;
   box-shadow: 0 20px 6px -6px black;
   font-family: @marketing-font;
   width: 100%;
@@ -22,7 +28,9 @@ margin: 25px;
   font-size: 1.5rem;
   text-align: center;
   text-decoration: bold;
+  background-color:@marketing-color-nav;
   border-bottom: 1px solid black;
+  width: 100%;
 }
 .card-content {
   flex-grow: 1;
@@ -36,6 +44,7 @@ margin: 25px;
   border-top: 1px solid black;
   font-size: 1rem;
   text-align: center;
+  width: 100%;
   &:hover{
     background-color: darken(@marketing-color-background, 10%)
   }
